--- a/modules/news/src/style.css
+++ b/modules/news/src/style.css
@@ -4,13 +4,13 @@
   right: 4px;
 }
 
-.row-x::after {
+.rows::after {
   content: "";
   clear: both;
   display: table;
 }
 
-[class*="col-"] {
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
   float: left;
   padding: 5px;
 }
